ahora es enlace

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <div class="container">
         <h2>Valores desde GET</h2>
-        <p id="result">Cargando...</p>
+        <a id="result">Cargando...</a>
     </div>
     <script>
         // Función para obtener parámetros de la URL
